[gd_scene load_steps=6 format=3 uid="uid://cp4r5vybok3jn"]

[ext_resource type="Script" path="res://scripts/ui_scripts/card.gd" id="1_ymm4o"]
[ext_resource type="Texture2D" uid="uid://box0x85q4wasm" path="res://icon.svg" id="2_d7hwy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h45nx"]
bg_color = Color(1, 1, 1, 0.12549)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5fh4i"]
bg_color = Color(1, 1, 1, 0.25098)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hdiam"]
bg_color = Color(1, 1, 1, 0)

[node name="Card" type="Control"]
custom_minimum_size = Vector2(125, 250)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_ymm4o")

[node name="Outline" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.639216, 0.639216, 0.8, 1)

[node name="MarginContainer" type="MarginContainer" parent="Outline"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2

[node name="Background" type="ColorRect" parent="Outline/MarginContainer"]
layout_mode = 2
color = Color(0.0823529, 0.0823529, 0.101961, 1)

[node name="MarginContainer" type="MarginContainer" parent="Outline/MarginContainer/Background"]
layout_mode = 2
offset_right = 121.0
offset_bottom = 246.0
size_flags_vertical = 3
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CardContainer" type="VBoxContainer" parent="Outline/MarginContainer/Background/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 8

[node name="CardTitle" type="Label" parent="Outline/MarginContainer/Background/MarginContainer/CardContainer"]
layout_mode = 2
text = "Card"

[node name="CardImage" type="TextureRect" parent="Outline/MarginContainer/Background/MarginContainer/CardContainer"]
layout_mode = 2
texture = ExtResource("2_d7hwy")
expand_mode = 5

[node name="CardDescription" type="Label" parent="Outline/MarginContainer/Background/MarginContainer/CardContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "description"
autowrap_mode = 3
text_overrun_behavior = 3

[node name="CardButton" type="Button" parent="Outline"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/hover = SubResource("StyleBoxFlat_h45nx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5fh4i")
theme_override_styles/normal = SubResource("StyleBoxFlat_hdiam")
text = "
"
